# KoshSignerUsingPartisiaZK

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  codex.md  phase.md
.kosh-backend/keystore/: runtime-contract-031545fa77edda4baf869c1f31439c3593ec6bf0e4-key-63010-party-1.json  runtime-contract-031545fa77edda4baf869c1f31439c3593ec6bf0e4-key-63010-party-2.json  runtime-contract-031545fa77edda4baf869c1f31439c3593ec6bf0e4-key-63010-party-3.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62020-party-1.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62020-party-2.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62020-party-3.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62021-party-1.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62021-party-2.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62021-party-3.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62022-party-1.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62022-party-2.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62022-party-3.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62023-party-1.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62023-party-2.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62023-party-3.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62024-party-1.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62024-party-2.json  runtime-contract-032645d750cacf93c6fbe7479774ca9d51e8a51faa-key-62024-party-3.json  runtime-contract-03d69b9a696147c8545aa580b2e528e69928d171e5-key-63000-party-1.json  runtime-contract-03d69b9a696147c8545aa580b2e528e69928d171e5-key-63000-party-2.json  runtime-contract-03d69b9a696147c8545aa580b2e528e69928d171e5-key-63000-party-3.json  runtime-contract-03d69b9a696147c8545aa580b2e528e69928d171e5-key-63001-party-1.json  runtime-contract-03d69b9a696147c8545aa580b2e528e69928d171e5-key-63001-party-2.json  runtime-contract-03d69b9a696147c8545aa580b2e528e69928d171e5-key-63001-party-3.json  share-031545fa77edda4baf869c1f31439c3593ec6bf0e4-63010-p1  share-031545fa77edda4baf869c1f31439c3593ec6bf0e4-63010-p2  share-031545fa77edda4baf869c1f31439c3593ec6bf0e4-63010-p3  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62020-p1  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62020-p2  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62020-p3  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62021-p1  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62021-p2  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62021-p3  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62022-p1  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62022-p2  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62022-p3  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62023-p1  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62023-p2  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62023-p3  share-032645d750cacf93c6fbe7479774ca9d51e8a51faa-62024-p1  (+8 more)
backend/: Cargo.toml
backend/src/: action_builders.rs  app.rs  config.rs  main.rs  orchestrator.rs  passkeys.rs  pqc.rs  threshold_read.rs
backend/src/api/: dto.rs  mod.rs  routes.rs  sse.rs
backend/src/chain_relay/: mod.rs
backend/src/coordinator/: mod.rs
backend/src/evm_broadcaster/: mod.rs
backend/src/jobs/: events.rs  manager.rs  mod.rs  model.rs
backend/src/keystore/: mod.rs  runtime_state.rs
backend/src/observability/: mod.rs
backend/src/party_runtime/: dkg.rs  gg20.rs  mod.rs  mta.rs  paillier.rs
backend/src/policy/: mod.rs
client/: dkg+threshold.md  dkg-article.md  package-lock.json  package.json  pitch.md  test-keyid-reuse.sh  threshold.md  tsconfig.json
client/src/: bio-server.ts  biometric-auth.ts  biometric-demo.html  biometric-native-demo.html  biometric-native.ts  biometric-zk-flow.ts  browser.ts  chain-utils.ts  coord-server.ts  deploy-zk-signer.ts  dkg-party.ts  evm.ts  gg20-signing.ts  index.ts  key-refresh.ts  minutiae-simulator.ts  mta.ts  paillier.ts  partisia.ts  party.ts  policy.ts  pqc-auth.ts  pqc-identity.ts  pqc.ts  setup-partisia-testnet.ts  shamir-ts.ts  test-biometric-zk.ts  test-dkg-flow.ts  test-evm-sign.ts  test-gg20-local.ts  test-gg20-sign.ts  test-policy.ts  test-pqc.ts  test-threshold-sign.ts  test-zk-flow.ts  testnet-pqc.ts  threshold-ecdsa.ts  threshold-read.ts  zk-signer.ts
client/test-logs/: share_key2_party1.enc  share_key2_party2.enc  share_key2_party3.enc  share_key3_party1.enc  share_key3_party2.enc  share_key3_party3.enc  share_key60003_party1.enc  share_key60003_party2.enc  share_key60003_party3.enc  share_key60004_party1.enc  share_key60004_party2.enc  share_key60004_party3.enc  share_key62003_party1.enc  share_key62003_party2.enc  share_key62003_party3.enc
contracts/kosh-account-registry/: Cargo.toml
contracts/kosh-account-registry/src/: lib.rs
contracts/kosh-mpc-signer/: Cargo.toml
contracts/kosh-mpc-signer/src/: lib.rs  off_chain.rs  replicated_secret_sharing.rs  signing_orchestration.rs  task_queue.rs
contracts/kosh-zk-signer/: Cargo.toml
contracts/kosh-zk-signer/src/: dkg.rs  lib.rs  off_chain.rs  shamir.rs  signing_state.rs  zk_compute.rs
deploy/: docker-compose.yml
scripts/: run_frontend_v2_stack.sh  run_partisia_rust_live.sh  sepolia_tx.mjs
services/: buf.gen.yaml
services/kosh-chain-relay/: Cargo.toml  Dockerfile  build.rs
services/kosh-chain-relay/src/: grpc_server.rs  main.rs  relay.rs
services/kosh-keystore/: Cargo.toml  Dockerfile  build.rs
services/kosh-keystore/src/: grpc_server.rs  main.rs  store.rs
services/kosh-party/: Cargo.toml  build.rs
services/kosh-party/src/: bulletin_board.rs  config.rs  dkg.rs  gg20.rs  main.rs  mta.rs  paillier.rs  phase.rs  types.rs
services/kosh-party/tests/: party_grpc_test.rs
services/kosh-pqc/: Cargo.toml  build.rs
services/kosh-pqc/src/: identity.rs  main.rs  rng.rs  service.rs
services/kosh-pqc/tests/: grpc_test.rs
(+57 files in other folders)
