[workspace]
members = [
    "contracts/kosh-mpc-signer",
    "contracts/kosh-account-registry",
    "contracts/kosh-vault",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
pbc_contract_common = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_contract_codegen = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_traits = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_lib = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
read_write_rpc_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
read_write_state_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
create_type_spec_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
