[workspace]
members = [
    "backend",
    "contracts/kosh-zk-signer",
    "contracts/kosh-account-registry",
    "contracts/kosh-vault",
    # microservices
    "services/kosh-pqc",
    "services/kosh-chain-relay",
    "services/kosh-keystore",
    "services/kosh-party",
]
resolver = "2"

[workspace.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/4.35.0/zkcompiler-4.35.0-jar-with-dependencies.jar"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
pbc_contract_common = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_contract_codegen = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_traits = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_lib = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
read_write_rpc_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
read_write_state_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
create_type_spec_derive = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
pbc_zk = { git = "https://gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.126.0" }
