[package]
name = "kosh-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kosh-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
rand = "0.8"
k256 = "0.13"
sha2 = "0.10"
sha3 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ml-kem = { version = "0.3", features = ["getrandom"] }
ml-dsa = { version = "0.1.0-rc.9", features = ["rand_core", "zeroize"] }
zeroize = { version = "1", features = ["derive"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
kosh-zk-signer = { path = "../contracts/kosh-zk-signer" }
pbc_traits.workspace = true

webauthn-rs = { version = "0.5.4", features = ["conditional-ui"] }
url = "2"
