[package]
name = "kosh-account-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
abi = [
    "pbc_contract_common/abi",
    "pbc_contract_codegen/abi",
    "pbc_traits/abi",
    "create_type_spec_derive/abi",
    "pbc_lib/abi",
]
plus_metadata = []

[lib]
path = "src/lib.rs"
crate-type = ['rlib', 'cdylib']

[dependencies]
pbc_contract_common.workspace = true
pbc_traits.workspace = true
pbc_lib.workspace = true
read_write_rpc_derive.workspace = true
read_write_state_derive.workspace = true
create_type_spec_derive.workspace = true
pbc_contract_codegen.workspace = true
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
