[package]
name = "kosh-mpc-signer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
abi = [
    "pbc_contract_common/abi",
    "pbc_contract_codegen/abi",
    "pbc_traits/abi",
    "create_type_spec_derive/abi",
    "pbc_lib/abi",
]
plus_metadata = []

[lib]
path = "src/lib.rs"
crate-type = ['rlib', 'cdylib']

[dependencies]
pbc_contract_common.workspace = true
pbc_traits.workspace = true
pbc_lib.workspace = true
read_write_rpc_derive.workspace = true
read_write_state_derive.workspace = true
create_type_spec_derive.workspace = true
pbc_contract_codegen.workspace = true
cggmp21 = { version = "0.6", features = ["curve-secp256k1", "state-machine", "spof"] }
round-based = { version = "0.4" }
rand = "0.8"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa-core", "ecdsa", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = "0.6"
rand_chacha = "0.3"
