[package]
name = "kosh-chain-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1", features = ["full"] }
tonic       = "0.12"
prost       = "0.13"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
k256        = { version = "0.13", features = ["ecdsa"] }
sha2        = "0.10"
hex         = "0.4"
base64      = "0.22"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1.18"

[build-dependencies]
tonic-build = "0.12"
