[package]
name = "kosh-keystore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1", features = ["full"] }
tonic       = "0.12"
prost       = "0.13"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
aes-gcm     = "0.10"
sha2        = "0.10"
hex         = "0.4"
base64      = "0.22"
rand        = "0.8"
k256        = { version = "0.13", features = ["arithmetic"] }
zeroize     = { version = "1", features = ["derive"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
