[package]
name = "kosh-pqc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kosh-pqc"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
tonic        = "0.11"
prost        = "0.12"
ml-kem       = { version = "0.3", features = ["getrandom"] }
ml-dsa       = { version = "0.1.0-rc.9", features = ["rand_core", "zeroize"] }
aes-gcm      = "0.10"
sha2         = "0.10"
rand         = "0.8"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
base64       = { version = "0.22", features = ["std"] }
hex          = "0.4"
anyhow       = "1"
zeroize      = { version = "1", features = ["derive"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"
getrandom    = { version = "0.4", features = ["std"] }
